!WIP bindings: add glib bindings
Signed-off-by: Bartosz Golaszewski <bgolaszewski@baylibre.com>

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ gpioinfocxx
 gpiomoncxx
 gpiosetcxx
 gpiod-cxx-test
+gpiodetect-glib
+gpioinfo-glib
+gpioget-glib
+gpioset-glib
+gpiomon-glib
+gpiofind-glib
 *.o
 *.lo
 *.la
